# cad_engine_cpp

./: .gitignore  CMakeLists.txt  Nodus_Architecture.drawio  main.cpp
nodus/: CMakeLists.txt  main.cpp
nodus/include/: NodusHandler.h
nodusComLib/: CMakeLists.txt  handler.cpp  listener.cpp
nodusComLib/include/: handler.h  listener.h
nodusComLib/include/protocol/: jsonrpc.h
nodusComLib/include/transport/: mock_transport.h  stdin_transport.h  transport_interface.h
nodusComLib/src/transport/: stdin_transport.cpp
nodusCoreLib/: CMakeLists.txt  Model.cpp
nodusCoreLib/geometry/: ExtrudeNode.cpp  LineNode.cpp  Node.cpp  SketchNode.cpp
nodusCoreLib/include/: Model.h
nodusCoreLib/include/geometry/: ExtrudeNode.h  LineNode.h  Node.h  SketchNode.h
nodusCoreLib/include/primatives/: gp_conversion.h
tests/: CMakeLists.txt  json_rpc_tests.cpp  nodus_core_test_primatives.cpp  nodus_integration_tests.cpp  rpc_handler_tests.cpp  test_handler.cpp
